# kc-mediaspec-interface

./: .gitignore  CMakeLists.txt  mediaspec_config.h.cmake  pom.xml
kis-mediaspec/: SdpConversor.h  SdpConversor.m  SpecTools.h  SpecTools.m
kis-mediaspec-interface/kis-mediaspec-interface.xcodeproj/: project.pbxproj
kis-mediaspec-interface/kis-mediaspec-test/: ConversorTestCase.m  IntersectTestCase.h  IntersectTestCase.m  kis-mediaspec-interface-test-Prefix.pch
kis-mediaspec-interface/mediaspec-tools/: SpecTools.m
kis-mediaspec/kis-mediaspec/: kis-mediaspec-Prefix.pch
kis-mediaspec/kis-mediaspec-interface.xcodeproj/: project.pbxproj
kis-mediaspec/kis-mediaspec-test/: ConversorTestCase.h  ConversorTestCase.m  IntersectTestCase.m  kis-mediaspec-test-Info.plist
kis-mediaspec/kis-mediaspec.xcodeproj/: project.pbxproj
kis-mediaspec/mediaspec-tools/: SpecTools.h
src/main/resources/com/kurento/: kc-mediaspec-interface.gwt.xml
src/main/thrift/: mediaSpec.thrift  payload.thrift  sessionSpec.thrift  transport.thrift
